Version 0.24.2
--------------
- The user can now create new library symbols and edit existing libraries.
- Standard and non standard libraries are identified by different icons.
- Macros can be split.
- Removed the "Show origin for macros" which is now useless.


Version 0.24.1
--------------

- Added a link to the Sourceforge project page in the About dialog (request #3531298).
- Now Java 1.5 is needed for compiling FidoCadJ.
- The standard libraries now are stdlib, ihram, elettrotecnica and pcb. Their elements will not be converted in primitives when the "split non standard symbols" option is active, UNLESS the "Strict compatibility with FidoCAD" mode is selected. 
- The "Strict compatibility with FidoCAD" mode is more reliable and the options about the "FidoCadJ extensions" have been eliminated.
- More precise selection of very close elements without "name" and "value" tags.
- Popup menu accessible with right click in the selection mode (cut, copy, paste, rotate, mirror request #3409656). Unuseful menu items are disabled if nothing is selected.
- Open a file is now faster and requires less memory.
- Added a Dutch translation of the user interface.
- Added the -l option to the command line interface.
- It is now easier to come back from an editing mode, to a macro that was previously selected.
- Selected objects appear in green, with different shades depending on their original color.
- More precise rendering of the spline curves.
- User can add and remove points to splines and polygons.
- The FidoCadJ project updated to the new version of the SourceForge software.
- Diagonal shift of the selected element done during copy/paste is now done during paste and not during copy. The shift can be disabled by turning off an option.
- Check and eventually auto complete the extension when loading FidoCadJ files.
- Some information about graphical file export are now saved on exit.

Version 0.24
------------

- Added the support for italic text lines